started implementing EF Identity

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
@@ -6,5 +6,11 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "ExpiryMinutes": 0,
+    "Issuer": "",
+    "Audience": ""
   }
 }
