--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Domain/TvJahnOrchesterApp.Domain.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Domain/TvJahnOrchesterApp.Domain.csproj
@@ -13,4 +13,8 @@
     <Folder Include="UserAggregate\Enums\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
+  </ItemGroup>
+
 </Project>
