started implementing registration

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
@@ -8,9 +8,9 @@
     }
   },
   "JwtSettings": {
-    "Secret": "",
-    "ExpiryMinutes": 0,
-    "Issuer": "",
-    "Audience": ""
+    "Secret": "sdfgsdfhdg",
+    "ExpiryMinutes": 30,
+    "Issuer": "OrchesterApp",
+    "Audience": "OrchesterAppUser"
   }
 }
