--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/package.json
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/package.json
@@ -21,14 +21,16 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor/app": "5.0.2",
+    "@capacitor/android": "5.4.2",
+    "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
-    "@capacitor/core": "5.0.3",
+    "@capacitor/core": "5.4.2",
     "@capacitor/filesystem": "^5.1.4",
-    "@capacitor/haptics": "5.0.2",
-    "@capacitor/keyboard": "5.0.2",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.4.2",
+    "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
-    "@capacitor/status-bar": "5.0.2",
+    "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
     "ionicons": "^7.0.0",
@@ -44,10 +46,9 @@
     "@angular-eslint/schematics": "^16.0.0",
     "@angular-eslint/template-parser": "^16.0.0",
     "@angular/cli": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.0.3",
+    "@capacitor/cli": "5.4.2",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
