imaplemented mail service

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
@@ -12,5 +12,12 @@
     "ExpiryMinutes": 30,
     "Issuer": "OrchesterApp",
     "Audience": "OrchesterAppUser"
+  },
+  "EmailConfiguration": {
+    "From": "orchester.app@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "orchester.app@gmail.com",
+    "Password": "sjgb cltj isga jvmx"
   }
 }
