added test and implemented red/green dot

--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Domain.Tests/TvJahnOrchesterApp.Domain.Tests.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Domain.Tests/TvJahnOrchesterApp.Domain.Tests.csproj
@@ -28,4 +28,9 @@
     <ProjectReference Include="..\TvJahnOrchesterApp.Domain\TvJahnOrchesterApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Fixtures\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
