reworked docker config to allow migartions

--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Contracts/TvJahnOrchesterApp.Contracts.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Contracts/TvJahnOrchesterApp.Contracts.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TvJahnOrchesterApp.Domain\TvJahnOrchesterApp.Domain.csproj" />
   </ItemGroup>
 
