--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Domain/TvJahnOrchesterApp.Domain.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Domain/TvJahnOrchesterApp.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
