--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Infrastructure/TvJahnOrchesterApp.Infrastructure.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Infrastructure/TvJahnOrchesterApp.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
