--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/Dockerfile
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM node:latest as build
 WORKDIR /usr/local/app
 COPY ./OrchesterApp.Frontend /usr/local/app/
 RUN npm install
-RUN npm run build --prod
+RUN npm run build
 
 # Stage 2: Serve app with nginx server
 FROM nginx:latest
-COPY --from=build /usr/local/app/www /usr/share/nginx/html/orchesterApp
+COPY --from=build /usr/local/app/www /usr/share/nginx/html
