started implementing secrets correctly and init scripts for db

--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,5 @@ __pycache__/
 # tools/
 
 # End of https://www.toptal.com/developers/gitignore/api/angular,aspnetcore
+/TvJahnOrchesterApp.Api/Secrets
+/SQL
