--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Infrastructure/TvJahnOrchesterApp.Infrastructure.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Infrastructure/TvJahnOrchesterApp.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.KeyPerFile" Version="7.0.15" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
@@ -29,7 +30,6 @@
 
   <ItemGroup>
     <Folder Include="Common\Interfaces\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
