--- a/TvJahnOrchesterApp.Api/OrchesterApp.Api/OrchesterApp.Api.csproj
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Api/OrchesterApp.Api.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>false</InvariantGlobalization>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>ce057849-f5a3-4450-83ec-019c1d86f699</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
