--- a/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.json
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Api/appsettings.json
@@ -7,19 +7,15 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Secret": "TimsSuperSecretOrchesterKeydasdsds",
-    "ExpiryMinutes": 1,
+    "Secret": "",
     "Issuer": "OrchesterApp",
+    "ExpiryMinutes": 1,
     "Audience": "OrchesterAppUser"
   },
   "EmailConfiguration": {
     "From": "orchester.app@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "orchester.app@gmail.com",
-    "Password": "sjgb cltj isga jvmx"
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=OrchesterAppDB;User Id=sa;Password=amiko123!;Encrypt=false"
+    "Username": "orchester.app@gmail.com"
   }
 }
