--- a/TvJahnOrchesterApp.Api/docker-compose.yml
+++ b/TvJahnOrchesterApp.Api/docker-compose.yml
@@ -4,6 +4,17 @@ networks:
   orchester-app-network:
     driver: bridge
 
+secrets:
+  connection_string_db: 
+    file: ./Secrets/ConnectionStringDb.txt 
+  db_admin_password:
+    file: ./Secrets/DbAdminPassword.txt
+  jwt_secret:
+    file: ./Secrets/JWTSecret.txt 
+  google_mail_api_key:
+    file: ./Secrets/GoogleMailAPIKey.txt 
+
+
 services:
   orchesterapp.frontend:
     image: ${DOCKER_REGISTRY-}orchesterapp.frontend
@@ -30,15 +41,21 @@ services:
     networks:
         - orchester-app-network
     environment:
-        - ConnectionStrings__DefaultConnection=Server=orchester-app-db;Database=OrchesterAppDB;User Id=sa;Password=amiko123!;Encrypt=false
-        - ASPNETCORE_URLS=http://+:8080 
+        ConnectionStrings__DefaultConnection: /run/secrets/connection_string_db
+        JWT_Secret_Key: /run/secrets/jwt_secret
+        Google_Mail_Api: /run/secrets/google_mail_api_key
+        ASPNETCORE_URLS: http://+:8080 
+    secrets:
+        - connection_string_db    
+        - jwt_secret
+        - google_mail_api_key
          
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: orchester-app-db
     environment:
         ACCEPT_EULA: Y
-        SA_PASSWORD: amiko123!
+        MSSQL_SA_PASSWORD_FILE: /run/secrets/db_admin_password
         User Id: sa
     ports:
      - 1433:1433
@@ -47,5 +64,8 @@ services:
      - orchesterAppDbVolumn:/var/opt/mssql
     networks:
      - orchester-app-network
+    secrets:
+     - db_admin_password 
+
 volumes:
   orchesterAppDbVolumn:
