--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Application/TvJahnOrchesterApp.Application.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Application/TvJahnOrchesterApp.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="13.5.0" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
