--- a/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Infrastructure/TvJahnOrchesterApp.Infrastructure.csproj
+++ b/TvJahnOrchesterApp.Api/TvJahnOrchesterApp.Infrastructure/TvJahnOrchesterApp.Infrastructure.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Common\Interfaces\" />
+    <Folder Include="Persistence\Dto\" />
   </ItemGroup>
 
 </Project>
