--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/Dockerfile
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/Dockerfile
@@ -7,4 +7,5 @@ RUN npm run build
 
 # Stage 2: Serve app with nginx server
 FROM nginx:latest
+COPY ./OrchesterApp.Frontend/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /usr/local/app/www /usr/share/nginx/html
