--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/Dockerfile
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:latest as build
 WORKDIR /usr/local/app
 COPY ./OrchesterApp.Frontend /usr/local/app/
 RUN npm install
-RUN npm run build
+RUN npm run build --prod
 
 # Stage 2: Serve app with nginx server
 FROM nginx:latest
