Implemented Minio file storage

--- a/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
+++ b/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
@@ -17,5 +17,12 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "orchester.app@gmail.com"
+  },
+  "MinIO": {
+    "Endpoint": "minio:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin123",
+    "Secure": false,
+    "BucketName": "orchesterapp-documents"
   }
 }
