--- a/OrchesterApp.Api/docker-compose.yml
+++ b/OrchesterApp.Api/docker-compose.yml
@@ -66,6 +66,29 @@ services:
       - orchester-app-network
     secrets:
       - db_admin_password
+  
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"      # MinIO API
+      - "9001:9001"      # MinIO Console
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+    networks:
+      - orchester-app-network
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
 volumes:
   orchesterAppPostgresDbVolumn:
+  minio_data:
+    driver: local
+    
