Added Secrets management for minio

--- a/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
+++ b/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
@@ -21,7 +21,7 @@
   "MinIO": {
     "Endpoint": "minio:9000",
     "AccessKey": "minioadmin",
-    "SecretKey": "minioadmin123",
+    "SecretKey": "",
     "Secure": false,
     "BucketName": "orchesterapp-documents"
   }
