--- a/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
+++ b/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
@@ -9,7 +9,7 @@
   "JwtSettings": {
     "Secret": "",
     "Issuer": "OrchesterApp",
-    "ExpiryMinutes": 1,
+    "ExpiryMinutes": 5,
     "Audience": "OrchesterAppUser"
   },
   "EmailConfiguration": {
@@ -21,7 +21,7 @@
   "MinIO": {
     "Endpoint": "minio:9000",
     "AccessKey": "minioadmin",
-    "SecretKey": "test123",
+    "SecretKey": "",
     "Secure": false,
     "BucketName": "orchesterapp-documents"
   }
