--- a/OrchesterApp.Api/OrchesterApp.Domain/OrchesterApp.Domain.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Domain/OrchesterApp.Domain.csproj
@@ -8,10 +8,10 @@
 
     <ItemGroup>
         <Folder Include="AbstimmungsAggregate\Enums\"/>
-        <Folder Include="OrchesterMitgliedAggregate\Enums\"/>
         <Folder Include="TerminAggregate\Enums\"/>
         <Folder Include="UserAggregate\Entities\"/>
         <Folder Include="UserAggregate\Enums\"/>
+        <Folder Include="\Enums\"/>
     </ItemGroup>
 
     <ItemGroup>
