Implemented nicer email notification

--- a/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
@@ -26,4 +26,8 @@
         <FrameworkReference Include="Microsoft.AspNetCore.App"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="Features\Termin\NotificationCategoryEmailSender\ChangeTerminDataEmailTemplate.html" />
+    </ItemGroup>
+
 </Project>
