Added Endpoints for notifications in portal

--- a/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="Features\Termin\NotificationCategoryEmailSender\ChangeTerminDataEmailTemplate.html" />
+        <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\ChangeTerminDataEmailTemplate.html"/>
     </ItemGroup>
 
 </Project>
