--- a/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
@@ -28,6 +28,7 @@
 
     <ItemGroup>
         <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\ChangeTerminDataEmailTemplate.html"/>
+        <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\CustomMessageEmailTemplate.html"/>
     </ItemGroup>
 
 </Project>
