--- a/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
@@ -27,7 +27,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\ChangeTerminDataEmailTemplate.html"/>
+        <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\ChangeTerminDataEmailTemplate.html">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
