implemented frist system and notifications

--- a/OrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
+++ b/OrchesterApp.Api/OrchesterApp.Api/appsettings.Development.json
@@ -9,5 +9,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=OrchesterAppDb;Username=postgres;Password=postgres"
-  }
+  },
+  "FrontendUrl": "http://localhost:8100"
 }
