--- a/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
+++ b/OrchesterApp.Api/OrchesterApp.Api/appsettings.json
@@ -18,6 +18,7 @@
     "Port": 465,
     "Username": "orchester.app@gmail.com"
   },
+  "FrontendUrl": "https://orchester-app.tim-kempkens.com",
   "MinIO": {
     "Endpoint": "minio:9000",
     "AccessKey": "minioadmin",
