--- a/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Application/OrchesterApp.Application.csproj
@@ -33,6 +33,12 @@
         <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\CustomMessageEmailTemplate.html">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
+        <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\TerminReminderEmailTemplate.html">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Features\Notification\NotificationCategoryEmailSender\TerminMissingResponseEmailTemplate.html">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
