implemented portal push messages

--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/package.json
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/package.json
@@ -34,6 +34,7 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
+    "@microsoft/signalr": "^9.0.6",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -44,9 +45,9 @@
     "@angular-eslint/builder": "^16.0.0",
     "@angular-eslint/eslint-plugin": "^16.0.0",
     "@angular-eslint/eslint-plugin-template": "^16.0.0",
-    "@angular-eslint/schematics": "^16.0.0",
+    "@angular-eslint/schematics": "^20.3.0",
     "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
+    "@angular/cli": "^19.2.17",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.4.2",
