--- a/OrchesterApp.Api/OrchesterApp.Infrastructure/OrchesterApp.Infrastructure.csproj
+++ b/OrchesterApp.Api/OrchesterApp.Infrastructure/OrchesterApp.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10"/>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.20"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
             <PrivateAssets>all</PrivateAssets>
